# PantheonRL

./: pyproject.toml  trainer.py
overcookedgym/: __init__.py
pantheonrl/algos/: bc.py
pantheonrl/algos/adap/: adap_learn.py  policies.py
pantheonrl/algos/modular/: learn.py  policies.py
pantheonrl/common/: multiagentenv.py  util.py  wrappers.py
pantheonrl/envs/: __init__.py
pantheonrl/envs/blockworldgym/: blockworld.py  simpleblockworld.py
pantheonrl/envs/liargym/: liar.py
pantheonrl/envs/rpsgym/: rps.py
