[project]
name = "pantheonrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.18"
dependencies = [
    "flask==2.2.2",
    "tensorflow",
    "torch==1.13.1",
    "tensorboard",
    "shimmy>=0.2.1",
    "stable-baselines3",
    "scipy",
    "tqdm"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pantheonrl"]